feat: added repositories urls endpoint
